# image-based-product-search-engine

./: .gitignore  ARCH.md  DONE.md  PLAN.md  PRODUCT_BRIEF.md  PROGRESS.json  README.md  RULES-INDEX.md  TODO.md  docker-compose.yml  env.example  package.json
apps/workers/: Dockerfile  pyproject.toml  requirements.txt
apps/workers/src/: config.py  dependencies.py  main.py
apps/workers/src/connectors/: api_connector.py  bigcommerce_connector.py  csv_connector.py  shopify_connector.py  woocommerce_connector.py
apps/workers/src/observability/: prometheus.py  sentry.py  telemetry.py
apps/workers/src/processors/: bg_removal_processor.py  clip_processor.py  image_processor.py  phash_processor.py  resnet_processor.py  yolo_processor.py
apps/workers/src/routers/: advanced_search.py  analytics.py  audit.py  billing.py  cdn.py  detection.py  export.py  index.py  ingest.py  preprocess.py  search.py  security.py
apps/workers/src/services/: advanced_search.py  analytics_service.py  audit_logger.py  billing_service.py  cdn_service.py  detection_service.py  embedding_service.py  export_service.py  index_service.py  ingest_service.py  preprocess_service.py  search_service.py  security_scanner.py  thumbnailing_pipeline.py
apps/workers/tests/chaos/: test_chaos_engineering.py
apps/workers/tests/e2e/: test_user_journey.py
apps/workers/tests/integration/: test_pipeline.py
apps/workers/tests/load/: test_load_performance.py
apps/workers/tests/regression/: test_performance_guardrails.py
apps/workers/tests/security/: test_security_validation.py
apps/workers/tests/unit/: test_bbox_math.py  test_clip_encode.py  test_mmr_diversity.py  (+1 more)
(+71 files in other folders)
